--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div class="text-center mb-4">
                         <h3 class="text-2xl font-bold text-gray-800">Basic</h3>
                         <p class="text-gray-600 mt-2">Mulai dari</p>
-                        <p class="text-3xl font-bold text-primary mt-2">Rp 499K</p>
+                        <p class="text-3xl font-bold text-primary mt-2">Rp 100K</p>
                     </div>
                     <ul class="space-y-3 mb-6">
                         <li class="flex items-center text-gray-600">
@@ -157,7 +157,7 @@
                         <span class="bg-primary text-white px-4 py-1 rounded-full text-sm">POPULER</span>
                         <h3 class="text-2xl font-bold text-gray-800 mt-4">Standard</h3>
                         <p class="text-gray-600 mt-2">Mulai dari</p>
-                        <p class="text-3xl font-bold text-primary mt-2">Rp 999K</p>
+                        <p class="text-3xl font-bold text-primary mt-2">Rp 200K</p>
                     </div>
                     <ul class="space-y-3 mb-6">
                         <li class="flex items-center text-gray-600">
@@ -189,7 +189,7 @@
                     <div class="text-center mb-4">
                         <h3 class="text-2xl font-bold text-gray-800">Custom</h3>
                         <p class="text-gray-600 mt-2">Mulai dari</p>
-                        <p class="text-3xl font-bold text-primary mt-2">Rp 1.499K</p>
+                        <p class="text-3xl font-bold text-primary mt-2">Rp 1.000K</p>
                     </div>
                     <ul class="space-y-3 mb-6">
                         <li class="flex items-center text-gray-600">
@@ -271,7 +271,7 @@
     <section class="relative min-h-screen flex items-center justify-center bg-cover bg-center" style="background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://images.pexels.com/photos/3184305/pexels-photo-3184305.jpeg');">
         <div class="container mx-auto px-4 text-center text-white">
             <h1 class="text-5xl md:text-6xl font-bold mb-6 font-montserrat">
-                Buat Website Profesional
+                Buat Website Profesional Sesuai kebutuhanmu
             </h1>
             <p class="text-xl md:text-2xl mb-8 max-w-2xl mx-auto">
                 Wujudkan website impian Anda dengan layanan profesional kami. Solusi terbaik untuk UMKM dan pelajar.
@@ -385,7 +385,7 @@
                         </div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">WhatsApp Business</h3>
                         <p class="text-gray-600 text-center">Chat langsung dengan tim kami</p>
-                        <span class="mt-4 text-green-500 font-medium">+62 812-3456-7890</span>
+                        <span class="mt-4 text-green-500 font-medium">+62 85156226837</span>
                     </a>
 
                     <!-- TikTok -->
@@ -430,8 +430,8 @@
                 </div>
                 <div>
                     <h3 class="text-xl font-bold mb-4">Kontak</h3>
-                    <p class="text-gray-300">Email: info@webdevpro.com</p>
-                    <p class="text-gray-300">Phone: +62 123 456 789</p>
+                    <p class="text-gray-300">Email: aryfaidz99@gamil.com</p>
+                    <p class="text-gray-300">Phone: +62 5156226837</p>
                 </div>
                 <div>
                     <h3 class="text-xl font-bold mb-4">Ikuti Kami</h3>
@@ -444,7 +444,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 text-center">
-                <p class="text-gray-300">© 2024 WebDevPro. All rights reserved.</p>
+                <p class="text-gray-300">© 2024 WebDevPro(by Ari faidz WL). All rights reserved.</p>
             </div>
         </div>
     </footer>
