--- a/basic.html
+++ b/basic.html
@@ -33,10 +33,25 @@
 <body class="bg-gray-50">
     <!-- Header -->
     <header class="fixed w-full bg-white shadow-lg z-50">
-        <div class="container mx-auto px-4 py-4">
+        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <a href="/" class="text-2xl font-bold text-primary">WebDev<span class="text-secondary">Pro</span></a>
+            <button id="menuToggle" aria-expanded="false" class="md:hidden p-2 focus:outline-none text-gray-600 hover:text-primary transition-colors">
+                <i class="fas fa-bars text-2xl"></i>
+            </button>
         </div>
     </header>
+
+    <!-- Service Modal -->
+    <div id="serviceModal" class="service-modal hidden fixed inset-0 flex items-center justify-center p-4" role="dialog" aria-modal="true" aria-labelledby="serviceModalTitle">
+        <div class="modal-content relative bg-white rounded-xl p-6 w-full max-w-md shadow-lg">
+            <button id="closeModal" aria-label="Close Modal" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700">
+                <i class="fas fa-times"></i>
+            </button>
+            <h2 id="serviceModalTitle" class="text-2xl font-bold mb-4">Paket Layanan</h2>
+            <p class="mb-4">Berikut adalah detail paket layanan yang kami tawarkan, termasuk fitur unggulan, kelebihan layanan, dan keterangan tambahan.</p>
+            <img src="https://images.pexels.com/photos/3184465/pexels-photo-3184465.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Layanan Illustration" class="rounded-lg mb-4">
+        </div>
+    </div>
 
     <!-- Main Content -->
     <main class="pt-24 pb-16">
@@ -151,5 +166,29 @@
     </main>
 
     <script src="scripts.js"></script>
+
+    <!-- Mobile Navigation Sidebar -->
+    <div id="mobileMenu" class="fixed inset-0 z-50 hidden">
+        <div class="fixed inset-0 bg-black bg-opacity-85 transition-opacity duration-300"></div>
+        <nav class="mobile-menu-content fixed right-0 top-0 bottom-0 w-[280px] bg-white shadow-xl transform translate-x-full transition-all duration-300 ease-in-out overflow-y-auto">
+            <div class="flex justify-between items-center p-4 border-b">
+                <span class="font-bold text-lg">Menu</span>
+                <button id="closeMenu" aria-label="Close Menu" class="text-gray-500 hover:text-gray-700">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <ul class="p-4 space-y-4">
+                <li><a href="#" class="block text-gray-800 hover:text-primary">Home</a></li>
+                <li><a href="#" class="block text-gray-800 hover:text-primary">Layanan</a></li>
+                <li><a href="#" class="block text-gray-800 hover:text-primary">About</a></li>
+                <li><a href="#" class="block text-gray-800 hover:text-primary">Kontak</a></li>
+            </ul>
+            <div class="p-4">
+                <button id="mobileServiceBtn" class="w-full bg-primary text-white py-2 px-4 rounded-lg hover:bg-opacity-90">
+                    Lihat Paket Layanan
+                </button>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
