--- a/order.html
+++ b/order.html
@@ -90,8 +90,8 @@
                                         <img src="https://upload.wikimedia.org/wikipedia/id/thumb/5/55/BNI_logo.svg/1200px-BNI_logo.svg.png" alt="BNI" class="h-8">
                                         <div>
                                             <p class="font-medium text-gray-800">Bank BNI</p>
-                                            <p class="text-gray-600">0123456789</p>
-                                            <p class="text-sm text-gray-500">a.n. WebDevPro Indonesia</p>
+                                            <p class="text-gray-600">172980120</p>
+                                            <p class="text-sm text-gray-500">a.n. Ari F**** W**** L*****A</p>
                                         </div>
                                     </div>
                                     <button class="text-primary hover:text-opacity-80" onclick="copyToClipboard('0123456789')">
@@ -103,14 +103,44 @@
                                 
                                 <div class="flex items-center justify-between p-4 bg-white rounded-lg">
                                     <div class="flex items-center space-x-4">
-                                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/BANK_BRI_logo.svg/2560px-BANK_BRI_logo.svg.png" alt="BRI" class="h-8">
+                                        <img src="Logo DANA -  dianisa.com.png" alt="Dana" class="h-8">
                                         <div>
-                                            <p class="font-medium text-gray-800">Bank BRI</p>
-                                            <p class="text-gray-600">9876543210</p>
-                                            <p class="text-sm text-gray-500">a.n. WebDevPro Indonesia</p>
+                                            <p class="font-medium text-gray-800">E-Wallet Dana</p>
+                                            <p class="text-gray-600">085156226837</p>
+                                            <p class="text-sm text-gray-500">a.n. Ari F**** W**** L*****A</p>
                                         </div>
                                     </div>
-                                    <button class="text-primary hover:text-opacity-80" onclick="copyToClipboard('9876543210')">
+                                    <button class="text-primary hover:text-opacity-80" onclick="copyToClipboard('081234567890')">
+                                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-1M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2a2 2 0 012 2m0 0h2a2 2 0 012 2v3m2 4H10m0 0l3-3m-3 3l3 3"></path>
+                                        </svg>
+                                    </button>
+                                </div>
+                                <div class="flex items-center justify-between p-4 bg-white rounded-lg mt-4">
+                                    <div class="flex items-center space-x-4">
+                                        <img src="ovo.png" alt="OVO" class="h-8">
+                                        <div>
+                                            <p class="font-medium text-gray-800">E-Wallet OVO</p>
+                                            <p class="text-gray-600">085156226837</p>
+                                            <p class="text-sm text-gray-500">a.n. Ari F**** W**** L*****A</p>
+                                        </div>
+                                    </div>
+                                    <button class="text-primary hover:text-opacity-80" onclick="copyToClipboard('089876543210')">
+                                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-1M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2a2 2 0 012 2m0 0h2a2 2 0 012 2v3m2 4H10m0 0l3-3m-3 3l3 3"></path>
+                                        </svg>
+                                    </button>
+                                </div>
+                                <div class="flex items-center justify-between p-4 bg-white rounded-lg mt-4">
+                                    <div class="flex items-center space-x-4">
+                                        <img src="shopepay.png" alt="ShopeePay" class="h-8">
+                                        <div>
+                                            <p class="font-medium text-gray-800">E-Wallet ShopeePay</p>
+                                            <p class="text-gray-600">085156226837</p>
+                                            <p class="text-sm text-gray-500">a.n. Ari F**** W**** L*****A</p>
+                                        </div>
+                                    </div>
+                                    <button class="text-primary hover:text-opacity-80" onclick="copyToClipboard('081122334455')">
                                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-1M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2a2 2 0 012 2m0 0h2a2 2 0 012 2v3m2 4H10m0 0l3-3m-3 3l3 3"></path>
                                         </svg>
