--- a/standard.html
+++ b/standard.html
@@ -20,6 +20,7 @@
             </div>
             
             <nav class="hidden md:flex items-center space-x-8">
+                <a href="index.html">beranda</a>
                 <a href="#features" class="nav-link">Keunggulan</a>
                 <a href="#services" class="nav-link" id="showServiceModal">Layanan</a>
                 <a href="#how" class="nav-link">Cara Kerja</a>
