--- a/index.html
+++ b/index.html
@@ -78,15 +78,18 @@
             width: 100%;
             height: 100%;
             background: rgba(0, 0, 0, 0.5);
-            backdrop-filter: blur(5px);
+            /* Remove backdrop-filter blur to avoid content being hidden */
+            /* backdrop-filter: blur(5px); */
             z-index: 1000;
             opacity: 0;
             transition: opacity 0.3s ease;
+            pointer-events: none;
         }
         
         .modal.show {
             display: flex;
             opacity: 1;
+            pointer-events: auto;
         }
         
         .modal-content {
@@ -245,22 +248,23 @@
             </button>
 
             <!-- Mobile Menu -->
-            <div id="mobileMenu" class="fixed inset-0 bg-black bg-opacity-50 backdrop-blur-sm z-50 hidden md:hidden" aria-hidden="true">
-                <div class="fixed right-0 top-0 h-full w-64 bg-white shadow-lg transform translate-x-full transition-transform duration-300 ease-in-out">
-                    <div class="p-6">
-                        <button id="closeMenu" class="absolute top-4 right-4 text-gray-600 hover:text-gray-900 focus:outline-none">
+            <div id="mobileMenu" class="fixed inset-0 bg-primary bg-opacity-95 z-50 hidden md:hidden" aria-hidden="true">
+                <div class="fixed right-0 top-0 h-full w-64 bg-primary shadow-lg transform translate-x-full transition-transform duration-300 ease-in-out">
+                    <div class="p-6 text-white">
+                        <button id="closeMenu" class="absolute top-4 right-4 text-white hover:text-gray-300 focus:outline-none">
                             <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                             </svg>
                         </button>
                         <nav class="mt-8">
                             <ul class="space-y-4">
-                                <li><a href="#features" class="block py-2 text-gray-800 hover:text-primary transition-colors">Keunggulan</a></li>
-                                <li><button id="mobileServiceBtn" class="w-full text-left py-2 text-gray-800 hover:text-primary transition-colors">Layanan</button></li>
-                                <li><a href="#how" class="block py-2 text-gray-800 hover:text-primary transition-colors">Cara Kerja</a></li>
-                                <li><a href="#portfolio" class="block py-2 text-gray-800 hover:text-primary transition-colors">Portofolio</a></li>
-                                <li><a href="#team" class="block py-2 text-gray-800 hover:text-primary transition-colors">Tim</a></li>
-                                <li><a href="#contact" class="block py-2 text-gray-800 hover:text-primary transition-colors">Kontak</a></li>
+                                <li><a href="#features" class="block py-2 text-white hover:text-accent transition-colors">Keunggulan</a></li>
+                                <li><a href="#services" class="block py-2 text-white hover:text-accent transition-colors">Layanan</a></li>
+                                <li><a href="#how" class="block py-2 text-white hover:text-accent transition-colors">Cara Kerja</a></li>
+                                <li><a href="#portfolio" class="block py-2 text-white hover:text-accent transition-colors">Portofolio</a></li>
+                                <li><a href="#team" class="block py-2 text-white hover:text-accent transition-colors">Tim</a></li>
+                                <li><a href="#contact" class="block py-2 text-white hover:text-accent transition-colors">Kontak</a></li>
+                                <li><a href="login.html" class="block py-2 text-white hover:text-accent transition-colors">Login</a></li>
                             </ul>
                         </nav>
                     </div>
